--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Weather app</string>
+    <string name="weatherapp_title">WeatherApp</string>
+    <string name="logo">Logo</string>
+
+
 </resources>
