MVP en mode double call dans le repository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Weather app</string>
     <string name="weatherapp_title">WeatherApp</string>
     <string name="logo">Logo</string>
+    <string name="server_url">https://my-weather-api.herokuapp.com/</string>
 
 
 </resources>
