Use shared pref to save last search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="weatherapp_title">WeatherApp</string>
     <string name="logo">Logo</string>
     <string name="server_url">https://my-weather-api.herokuapp.com/</string>
+    <string name="weatherTitle">Weather</string>
 
 
 </resources>
