Fix test. Back to android studio 2.3.3 Close Rx processes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="logo">Logo</string>
     <string name="server_url">https://my-weather-api.herokuapp.com/</string>
     <string name="weatherTitle">Weather</string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
